@@ -1,3 +1,4 @@
+2018-02-28: Declaration of scenario variables, native packages a-la OPAM
 2018-02-26: query policies, search by property
 2018-02-25: licenses as properties
 2018-02-22: alr test command
